syntax = "proto3";

package fileservice;

import "google/protobuf/empty.proto";

option go_package = "files.service";

service FileService {
    rpc List(google.protobuf.Empty) returns (ListResponse) {
    }

    rpc Get(GetRequest) returns (stream GetResponse) {
    }

     rpc Create(stream CreateRequest) returns(CreateResponse);
}

message CreateRequest {
    string filename = 1;
    bytes data = 2;
}

message CreateResponse {
  string filename = 1;
}

message GetRequest {
  string filename = 1;
}

message GetResponse {
  bytes data = 1;
}

message FileInfo {
  string name = 1;
  string created_at = 2;
  string updated_at = 3;
}

message ListResponse {
  repeated FileInfo files = 1;
}